--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "nedb-persist",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A NeDb storage for redux-persist",
   "main": "lib/index.js",
+  "typings": "typings.d.ts",
   "scripts": {
     "prepublish": "babel src --out-dir lib",
     "test": "echo \"Error: no test specified\" && exit 1"
